--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Brycen Biskner",
   "license": "ISC",
   "dependencies": {
+    "express": "^5.2.1",
     "winston": "^3.19.0"
   },
   "devDependencies": {
