--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "Brycen Biskner",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^2.2.2",
     "express": "^5.2.1",
+    "express-session": "^1.19.0",
     "morgan": "^1.10.1",
     "winston": "^3.19.0"
   },
